experiments/ISSTA21/8/log-error
error: unknown argument: '-maccumulate-outgoing-args'
error: unknown argument: '-fno-var-tracking-assignments'
error: unknown argument: '-femit-struct-debug-baseonly'
error: unknown argument: '-fconserve-stack'
warning: optimization flag '-fno-inline-functions-called-once' is not supported [-Wignored-optimization-argument]
warning: unknown warning option '-Wno-unused-but-set-variable'; did you mean '-Wno-unused-const-variable'? [-Wunknown-warning-option]
warning: unknown warning option '-Wno-unused-but-set-variable'; did you mean '-Wno-unused-const-variable'? [-Wunknown-warning-option]
In file included from arch/x86/kvm/x86.c:22:
In file included from include/linux/kvm_host.h:15:
In file included from include/linux/sched.h:72:
In file included from include/linux/sem.h:81:
include/linux/rcupdate.h:808:2: error: array size is negative
        BUILD_BUG_ON(!__builtin_constant_p(offset));
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/linux/kernel.h:717:22: note: expanded from macro 'BUILD_BUG_ON'
                ((void)sizeof(char[1 - 2*!!(condition)]));      \
                                   ^~~~~~~~~~~~~~~~~~~
In file included from arch/x86/kvm/x86.c:22:
In file included from include/linux/kvm_host.h:29:
In file included from /data/backport/linux-cve/8/pc-patch/arch/x86/include/asm/kvm_host.h:17:
In file included from include/linux/tracepoint.h:20:
In file included from include/linux/jump_label.h:17:
/data/backport/linux-cve/8/pc-patch/arch/x86/include/asm/jump_label.h:16:2: error: implicit declaration of function 'asm_volatile_goto' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        asm_volatile_goto("1:"
        ^
/data/backport/linux-cve/8/pc-patch/arch/x86/include/asm/jump_label.h:22:3: error: expected ')'
                : :  "i" (key) : : l_yes);
                ^
/data/backport/linux-cve/8/pc-patch/arch/x86/include/asm/jump_label.h:16:19: note: to match this '('
        asm_volatile_goto("1:"
                         ^
In file included from arch/x86/kvm/x86.c:24:
In file included from arch/x86/kvm/mmu.h:5:
arch/x86/kvm/kvm_cache_regs.h:43:32: warning: implicit conversion from enumeration type 'enum kvm_reg_ex' to different enumeration type 'enum kvm_reg' [-Wenum-conversion]
                kvm_x86_ops->cache_reg(vcpu, VCPU_EXREG_PDPTR);
                ~~~~~~~~~~~                  ^~~~~~~~~~~~~~~~
error: unknown argument: '-maccumulate-outgoing-args'
error: unknown argument: '-fno-var-tracking-assignments'
error: unknown argument: '-femit-struct-debug-baseonly'
error: unknown argument: '-fconserve-stack'
warning: optimization flag '-fno-inline-functions-called-once' is not supported [-Wignored-optimization-argument]
warning: unknown warning option '-Wno-unused-but-set-variable'; did you mean '-Wno-unused-const-variable'? [-Wunknown-warning-option]
warning: unknown warning option '-Wno-unused-but-set-variable'; did you mean '-Wno-unused-const-variable'? [-Wunknown-warning-option]
In file included from arch/x86/kvm/x86.c:22:
In file included from include/linux/kvm_host.h:15:
In file included from include/linux/sched.h:72:
In file included from include/linux/sem.h:81:
include/linux/rcupdate.h:808:2: error: array size is negative
        BUILD_BUG_ON(!__builtin_constant_p(offset));
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
include/linux/kernel.h:717:22: note: expanded from macro 'BUILD_BUG_ON'
                ((void)sizeof(char[1 - 2*!!(condition)]));      \
                                   ^~~~~~~~~~~~~~~~~~~
In file included from arch/x86/kvm/x86.c:22:
In file included from include/linux/kvm_host.h:29:
In file included from /data/backport/linux-cve/8/pe/arch/x86/include/asm/kvm_host.h:17:
In file included from include/linux/tracepoint.h:20:
In file included from include/linux/jump_label.h:17:
/data/backport/linux-cve/8/pe/arch/x86/include/asm/jump_label.h:16:2: error: implicit declaration of function 'asm_volatile_goto' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        asm_volatile_goto("1:"
        ^
/data/backport/linux-cve/8/pe/arch/x86/include/asm/jump_label.h:22:3: error: expected ')'
                : :  "i" (key) : : l_yes);
                ^
/data/backport/linux-cve/8/pe/arch/x86/include/asm/jump_label.h:16:19: note: to match this '('
        asm_volatile_goto("1:"
                         ^
In file included from arch/x86/kvm/x86.c:24:
In file included from arch/x86/kvm/mmu.h:5:
arch/x86/kvm/kvm_cache_regs.h:43:32: warning: implicit conversion from enumeration type 'enum kvm_reg_ex' to different enumeration type 'enum kvm_reg' [-Wenum-conversion]
                kvm_x86_ops->cache_reg(vcpu, VCPU_EXREG_PDPTR);
                ~~~~~~~~~~~                  ^~~~~~~~~~~~~~~~
